--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v2
-        with: { version: 8 }
+      - uses: pnpm/action-setup@v4
+        with: 
+            version: 10
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm lint
