--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm --filter @codebinx/web dev",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage",
     "lint": "pnpm -r run lint",
-    "test": "pnpm -r run test",
     "build": "pnpm -r run build"
   },
   "keywords": [],
@@ -21,7 +23,10 @@
     "@eslint/js": "^9.29.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "@vitest/coverage-v8": "^3.2.3",
     "eslint": "^9.29.0",
-    "eslint-config-next": "15.3.3"
+    "eslint-config-next": "15.3.3",
+    "tsx": "^4.20.3",
+    "vitest": "^3.2.3"
   }
 }
