--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
+    "seed": "pnpm --filter @codebinx/scripts run seed",
     "lint": "pnpm -r run lint",
     "build": "pnpm -r run build"
   },
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.29.0",
+    "@faker-js/faker": "^9.8.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitest/coverage-v8": "^3.2.3",
