--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,7 +4,6 @@
     "scripts": {
         "generate": "prisma generate",
         "migrate:dev": "prisma migrate dev",
-        "migrate:deploy": "prisma migrate deploy",
-        "postinstall": "pnpm --filter @codebinx/db run generate"
+        "migrate:deploy": "prisma migrate deploy"
     }
 }
