chore(prisma): enforce single client via pnpm override

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "pnpm --filter @codebinx/web dev",
     "test": "vitest run",
@@ -10,7 +11,9 @@
     "coverage": "vitest run --coverage",
     "seed": "pnpm --filter @codebinx/scripts run seed",
     "lint": "pnpm -r run lint",
-    "build": "pnpm -r run build"
+    "build": "pnpm -r run build",
+    "db": "dotenv -e .env -- pnpm --filter \"@codebinx/db\" run",
+    "db:migrate": "dotenv -e .env -- pnpm --filter \"@codebinx/db\" run migrate:dev"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitest/coverage-v8": "^3.2.3",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.3",
     "tsx": "^4.20.3",
