chore(db): move zod-prisma-types to db and regenerate Zod schemas

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,14 +10,10 @@
         "studio": "prisma studio"
     },
     "dependencies": {
-        "@prisma/client": "workspace:*"
+        "@prisma/client": "6.9.0"
     },
     "devDependencies": {
-        "prisma": "^6.9.0"
-    },
-    "pnpm": {
-        "overrides": {
-            "@prisma/client": "workspace:*"
-        }
+        "prisma": "^6.9.0",
+        "zod-prisma-types": "^3.2.4"
     }
 }
