--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,8 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "zod-prisma-types": "^3.2.4"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
