--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
+  "pnpm": {
+    "overrides": {
+      "@prisma/client": "^6.9.0"
+    }
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.29.0",
