--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,5 +7,8 @@
         "bcryptjs": "^3.0.2",
         "nanoid": "^5.1.5",
         "zod": "^3.25.64"
+    },
+    "devDependencies": {
+        "@prisma/client": "^6.9.0"
     }
 }
