--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,9 +10,11 @@
         "studio": "prisma studio"
     },
     "dependencies": {
-        "@prisma/client": "6.9.0"
+        "@prisma/client": "6.9.0",
+        "@prisma/extension-accelerate": "^2.0.1"
     },
     "devDependencies": {
+        "@types/node": "^20.19.0",
         "prisma": "^6.9.0",
         "zod-prisma-types": "^3.2.4"
     }
