--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
+  "references": [
+    {
+      "path": "../../packages/core"
+    }
+  ],
   "compilerOptions": {
     "composite": true,
     "outDir": "dist",
