--- a/packages/schemas/tsconfig.json
+++ b/packages/schemas/tsconfig.json
@@ -3,7 +3,16 @@
     "compilerOptions": {
         "composite": true,
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "strict": true,
+        "target": "es2020",
+        "module": "esnext",
+        "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "lib": [
+            "ES2020",
+            "DOM"
+        ]
     },
     "include": [
         "src/**/*"
