--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
-  "references": [
-    {
-      "path": "../../packages/core"
-    }
-  ],
   "compilerOptions": {
     "composite": true,
     "outDir": "dist",
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true, 
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -26,6 +21,7 @@
         "name": "next"
       }
     ],
+    "baseUrl": "",
     "paths": {
       "@/*": [
         "./*"
@@ -33,6 +29,11 @@
     },
     
   },
+  "references": [
+    {
+      "path": "../../packages/core"
+    }
+  ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
