--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "dist",
     "strict": true,
     "target": "es2020",
@@ -14,6 +14,11 @@
       "DOM"
     ]
   },
+  "references": [
+    {
+      "path": "../db"
+    }
+  ],
   "include": [
     "src/**/*"
   ]
