--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
+    "baseUrl": ".",
     "outDir": "dist",
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
-    "skipLibCheck": true, 
+    "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -21,19 +25,34 @@
         "name": "next"
       }
     ],
-    "baseUrl": "",
     "paths": {
+      "@codebinx/core": [
+        "../../packages/core/src/index"
+      ],
+      "@codebinx/core/*": [
+        "../../packages/core/src/*"
+      ],
+      "@codebinx/db": [
+        "../../packages/db/src/index"
+      ],
+      "@codebinx/db/*": [
+        "../../packages/db/src/*"
+      ],
+      "@codebinx/schemas/*": [
+        "../../packages/schemas/*"
+      ],
       "@/*": [
         "./*"
       ]
-    },
-    
-  },
-  "references": [
-    {
-      "path": "../../packages/core"
     }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
