--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,14 @@
     "name": "@codebinx/core",
     "version": "0.0.0",
     "private": true,
+    "composite": true,
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "dependencies": {
         "@codebinx/db": "workspace:^",
         "bcryptjs": "^3.0.2",
