feat(bin): getAll function + implement @codebinx/schemas in @codebinx/web tsconfig

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -38,8 +38,11 @@
       "@codebinx/db/*": [
         "../../packages/db/src/*"
       ],
+      "@codebinx/schemas": [
+        "../../packages/schemas/src/index"
+      ],
       "@codebinx/schemas/*": [
-        "../../packages/schemas/*"
+        "../../packages/schemas/src/*"
       ],
       "@/*": [
         "./*"
