--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.32.0",
     "@clerk/nextjs": "^6.22.0",
     "@codebinx/core": "workspace:*",
+    "@codebinx/schemas": "workspace:*",
     "@hookform/resolvers": "^5.1.1",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
