--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "composite": true,
   "scripts": {
     "gen": "pnpm -F @codebinx/db run generate"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "keywords": [],
   "author": "",
