--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -4,6 +4,9 @@
     "main": "index.ts",
     "private": true,
     "type": "module",
+    "scripts": {
+        "test": "vitest run --coverage"
+    },
     "dependencies": {
         "pino": "^9.7.0"
     }
