--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitest/coverage-v8": "^3.2.3",
+    "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.3",
